[package]
name = "async-utils"
version = "1.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/async-rs/async-utils"
documentation = "https://docs.rs/async-utils"
description = "Utilities for async programming"
readme = "README.md"
edition = "2018"
keywords = []
categories = []
authors = [
    "Yoshua Wuyts <yoshuawuyts@gmail.com>"
]

[features]

[dependencies]

[dev-dependencies]
