[package]
name = "async-utils"
version = "1.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/async-rs/async-utils"
documentation = "https://docs.rs/async-utils"
description = "Utilities for async programming"
readme = "README.md"
edition = "2018"
keywords = []
categories = []
authors = [
    "Yoshua Wuyts <yoshuawuyts@gmail.com>"
]

[features]

[dependencies]
async-std = "1"

[dev-dependencies]
async-std = { version = "1", features = ["attributes", "unstable"] }
pin-utils = "0.1.0-alpha.4"